--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/fontawesome-free": "^6.0.0",
         "bootstrap-pincode-input": "^3.0.1",
         "jquery": "^3.6.0",
-        "mdbootstrap": "^4.20.0"
+        "mdbootstrap": "^4.20.0",
+        "sweetalert2": "^11.4.6"
     }
 }
