make attendance-qr scan

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bootstrap-pincode-input": "^3.0.1",
         "jquery": "^3.6.0",
         "mdbootstrap": "^4.20.0",
+        "qr-scanner": "^1.4.1",
         "sweetalert2": "^11.4.6"
     }
 }
