--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.0.0",
+        "@ttskch/select2-bootstrap4-theme": "^1.5.2",
         "bootstrap-pincode-input": "^3.0.1",
         "jquery": "^3.6.0",
         "mdbootstrap": "^4.20.0",
